--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@react-navigation/stack": "^5.14.3",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.18.0",
     "react-native-tab-view": "^2.16.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
