--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.14.1",
     "@react-native-masked-view/masked-view": "^0.2.2",
+    "@react-native-picker/picker": "^1.12.0",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
@@ -20,6 +21,7 @@
     "@react-navigation/stack": "^5.14.3",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
