--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,23 +5,24 @@ platform :ios, '10.0'
 
 target 'ExpenseManager' do
   config = use_native_modules!
+  use_react_native!(path: config['reactNativePath'])
 
-  use_react_native!(:path => config["reactNativePath"])
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
   target 'ExpenseManagerTests' do
     inherit! :complete
     # Pods for testing
   end
 
-  # Enables Flipper.
-  #
-  # Note that if you have use_frameworks! enabled, Flipper will not work and
-  # you should disable these next few lines.
-  use_flipper!
-  post_install do |installer|
-    flipper_post_install(installer)
+    # Enables Flipper.
+    #
+    # Note that if you have use_frameworks! enabled, Flipper will not work and
+    # you should disable these next few lines.
+    use_flipper!({'Flipper' => '0.81.0'}) # should match the version of your Flipper client app
+    post_install do |installer|
+      flipper_post_install(installer)
+    end
   end
-end
 
 target 'ExpenseManager-tvOS' do
   # Pods for ExpenseManager-tvOS
